fixed width off screen, added links for champion divs

--- a/lolcensus/champion/static/champion/css/main.css
+++ b/lolcensus/champion/static/champion/css/main.css
@@ -56,8 +56,7 @@ ul {
 .champion {
     border: 5px solid transparent;
     display: block;
-    flex: 1 0 20%;
-    margin: 5px 5px;
+    flex: 1 0 15%;
     text-align: center;
 }
 
@@ -67,6 +66,7 @@ ul {
 
 .champion-img {
     margin-top: 20px;
+    width: 100px;
 }
 
 .champion-list {
@@ -78,6 +78,7 @@ ul {
 }
 
 .champion-name {
+    font-weight: 800;
     margin-top: 10px;
     text-transform: uppercase;
 }
@@ -98,7 +99,7 @@ ul {
     line-height: 1.8rem;
     padding: 10px 0;
     text-transform: uppercase;
-    width: 100vw;
+    width: 100%;
 }
 
 .footer > a {
@@ -116,7 +117,7 @@ ul {
 }
 
 .header-img {
-    width: 100vw;
+    width: 100%;
     border-bottom: 2px solid #000;
 }
 
@@ -132,10 +133,11 @@ ul {
     flex: 1;
     font-weight: 600;
     margin: 20px auto 20px auto;
-    min-width: 96vw;
+    min-width: 94vw;
     padding: 15px;
     height: fit-content;
     width: fit-content;
+    max-width: 94%;
 }
 
 .nav-bar {
@@ -145,8 +147,8 @@ ul {
     display: flex;
     flex-direction: row;
     font-size: 1.2rem;
-    min-width: 100vw;
     padding: 5px 10px;
+    width: 100%
 }
 
 .nav-link {
